# Aurora

./: README.md  setup.cfg
Aurora/: __init__.py  dataset.py  fit_model.py  model.py  trainer.py
Prism/: dataset.py  model.py  utils.py
