[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}

[metadata]
name = Prism
version = file: VERSION.txt
description = Personalized Reconstruction with Interactive Signature and Modalities
long_description = file: README.md
author = Jiawei Chen
author_email = jiaweichen@pku.edu.cn
license = GPL-3.0
keywords = 
	generation
	single cell
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: FSF Approved :: GPL License
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[bdist_wheel]
build_number = 1

[options]
packages = 
	Prism
python_requires = >=3.8
install_requires = 
	anndata
    dill
    h5py
    numpy
    pandas
    parse
    pynvml
    pytorch_ignite
    scanpy
    scikit_learn
    scipy
    setuptools
    sparse
    torch
	tensorboardX
zip_safe = False
